--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo"
             >Web<span class="logo-black">Studio</span></a
@@ -50,19 +50,24 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="burger-button">
+          <svg class="burger-svg" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
       <!-- Order servise -->
       <section class="order">
-        <div class="container">
+        <div class="container order-container">
           <h1 class="order-title">Effective Solutions for Your Business</h1>
           <button class="order-button" type="button">Order Service</button>
         </div>
       </section>
       <!-- About us -->
       <section class="about-us">
-        <div class="container">
+        <div class="container about-us-container">
           <h2 class="visually-hidden">About us</h2>
           <ul class="about-us-list">
             <li class="about-us-list-item">
@@ -117,7 +122,7 @@
         </div>
       </section>
       <!-- Our crew -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -335,9 +340,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Our portfolio -->
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title" id="our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -460,9 +465,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-description">
           <a href="./index.html" class="logo footer-logo"
@@ -527,8 +532,8 @@
           </form>
         </div>
       </div>
-    </footer>
-    <div class="modal-overlay">
+    </footer> -->
+    <!-- <div class="modal-overlay">
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="close-svg" width="8" height="8">
@@ -613,6 +618,6 @@
           <button class="submit-button" type="submit">Submit</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
