--- a/index.html
+++ b/index.html
@@ -122,13 +122,17 @@
         </div>
       </section>
       <!-- Our crew -->
-      <!-- <section class="team">
-        <div class="container">
+      <section class="team">
+        <div class="container our-crew-container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
               <img
-                src="./images/img-3.jpg"
+                src="./images/our-crew/img-3.jpg"
+                srcset="
+                  ./images/our-crew/img-3.jpg    1x,
+                  ./images/our-crew/img-3@2x.jpg 2x
+                "
                 alt="Mark Guerrero(Photo)"
                 width="264"
                 height="260"
@@ -181,7 +185,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/img-2.jpg"
+                src="./images/our-crew/img-2.jpg"
+                srcset="
+                  ./images/our-crew/img-2.jpg    1x,
+                  ./images/our-crew/img-2@2x.jpg 2x
+                "
                 alt="Tom Ford(Photo)"
                 width="264"
                 height="260"
@@ -234,7 +242,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/img-1.jpg"
+                src="./images/our-crew/img-1.jpg"
+                srcset="
+                  ./images/our-crew/img-1.jpg    1x,
+                  ./images/our-crew/img-1@2x.jpg 2x
+                "
                 alt="Camila Garcia(Photo)"
                 width="264"
                 height="260"
@@ -287,7 +299,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/img.jpg"
+                src="./images/our-crew/img.jpg"
+                srcset="
+                  ./images/our-crew/img.jpg    1x,
+                  ./images/our-crew/img@2x.jpg 2x
+                "
                 alt="Daniel Wilson(Photo)"
                 width="264"
                 height="260"
@@ -340,7 +356,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Our portfolio -->
       <!-- <section class="portfolio">
         <div class="container">
