--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
         </div>
       </section>
       <!-- Our portfolio -->
-      <!-- <section class="portfolio">
-        <div class="container">
+      <section class="portfolio">
+        <div class="container portfolio-container">
           <h2 class="portfolio-title" id="our-portfolio">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
@@ -481,7 +481,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="container footer-container">
