--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="container header-container">
         <nav class="navigation">
-          <a href="./index.html" class="logo"
+          <a href="./index.html" class="logo header-logo"
             >Web<span class="logo-black">Studio</span></a
           >
           <ul class="menu-list">
@@ -364,13 +364,36 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="portfolio-list-img">
-                <img
-                  class="img-anime"
-                  src="./images/portfolio-1.jpg"
-                  alt="Banking app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <!-- Desktop (≥1158px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/desk/portfolio-1-desk-min.jpg    1x,
+                      ./images/portfolio/desk/portfolio-1-desk@2x-min.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <!-- Tablet (768px–1157px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/tab/portfolio-1-tab-min.jpg    1x,
+                      ./images/portfolio/tab/portfolio-1-tab@2x-min.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <!-- Mobile (<768px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/mob/portfolio-1-mob-min.jpg    1x,
+                      ./images/portfolio/mob/portfolio-1-mob@2x-min.jpg 2x
+                    "
+                  />
+                  <!-- Fallback -->
+                  <img
+                    src="./images/portfolio/mob/portfolio-1-mob-min.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="portfolio-img-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -384,12 +407,36 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-img">
-                <img
-                  src="./images/portfolio-2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <!-- Desktop (≥1158px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/desk/portfolio-2-desk-min.jpg    1x,
+                      ./images/portfolio/desk/portfolio-2-desk@2x-min.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <!-- Tablet (768px–1157px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/tab/portfolio-2-tab-min.jpg    1x,
+                      ./images/portfolio/tab/portfolio-2-tab@2x-min.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <!-- Mobile (<768px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/mob/portfolio-2-mob-min.jpg    1x,
+                      ./images/portfolio/mob/portfolio-2-mob@2x-min.jpg 2x
+                    "
+                  />
+                  <!-- Fallback -->
+                  <img
+                    src="./images/portfolio/mob/portfolio-2-mob-min.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="portfolio-img-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -404,12 +451,36 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-img">
-                <img
-                  src="./images/portfolio-3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <!-- Desktop (≥1158px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/desk/portfolio-3-desk-min.jpg    1x,
+                      ./images/portfolio/desk/portfolio-3-desk@2x-min.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <!-- Tablet (768px–1157px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/tab/portfolio-3-tab-min.jpg    1x,
+                      ./images/portfolio/tab/portfolio-3-tab@2x-min.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <!-- Mobile (<768px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/mob/portfolio-3-mob-min.jpg    1x,
+                      ./images/portfolio/mob/portfolio-3-mob@2x-min.jpg 2x
+                    "
+                  />
+                  <!-- Fallback -->
+                  <img
+                    src="./images/portfolio/mob/portfolio-3-mob-min.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="portfolio-img-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -424,12 +495,36 @@
 
             <li class="portfolio-list-item">
               <div class="portfolio-list-img">
-                <img
-                  src="./images/portfolio-4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <!-- Desktop (≥1158px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/desk/portfolio-4-desk-min.jpg    1x,
+                      ./images/portfolio/desk/portfolio-4-desk@2x-min.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <!-- Tablet (768px–1157px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/tab/portfolio-4-tab-min.jpg    1x,
+                      ./images/portfolio/tab/portfolio-4-tab@2x-min.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <!-- Mobile (<768px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/mob/portfolio-4-mob-min.jpg    1x,
+                      ./images/portfolio/mob/portfolio-4-mob@2x-min.jpg 2x
+                    "
+                  />
+                  <!-- Fallback -->
+                  <img
+                    src="./images/portfolio/mob/portfolio-4-mob-min.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="portfolio-img-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -443,12 +538,36 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-img">
-                <img
-                  src="./images/portfolio-5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <!-- Desktop (≥1158px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/desk/portfolio-5-desk-min.jpg    1x,
+                      ./images/portfolio/desk/portfolio-5-desk@2x-min.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <!-- Tablet (768px–1157px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/tab/portfolio-5-tab-min.jpg    1x,
+                      ./images/portfolio/tab/portfolio-5-tab@2x-min.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <!-- Mobile (<768px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/mob/portfolio-5-mob-min.jpg    1x,
+                      ./images/portfolio/mob/portfolio-5-mob@2x-min.jpg 2x
+                    "
+                  />
+                  <!-- Fallback -->
+                  <img
+                    src="./images/portfolio/mob/portfolio-5-mob-min.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="portfolio-img-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -462,12 +581,36 @@
             </li>
             <li class="portfolio-list-item">
               <div class="portfolio-list-img">
-                <img
-                  src="./images/portfolio-6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <!-- Desktop (≥1158px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/desk/portfolio-6-desk-min.jpg    1x,
+                      ./images/portfolio/desk/portfolio-6-desk@2x-min.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <!-- Tablet (768px–1157px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/tab/portfolio-6-tab-min.jpg    1x,
+                      ./images/portfolio/tab/portfolio-6-tab@2x-min.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <!-- Mobile (<768px) -->
+                  <source
+                    srcset="
+                      ./images/portfolio/mob/portfolio-6-mob-min.jpg    1x,
+                      ./images/portfolio/mob/portfolio-6-mob@2x-min.jpg 2x
+                    "
+                  />
+                  <!-- Fallback -->
+                  <img
+                    src="./images/portfolio/mob/portfolio-6-mob-min.jpg"
+                    alt="Banking App"
+                  />
+                </picture>
                 <p class="portfolio-img-description">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -483,7 +626,7 @@
         </div>
       </section>
     </main>
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer-container">
         <div class="footer-description">
           <a href="./index.html" class="logo footer-logo"
@@ -548,7 +691,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- <div class="modal-overlay">
       <div class="modal">
         <button class="close-button" type="button">
