--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
                   />
                   <!-- Fallback -->
                   <img
+                    class="portfolio-img"
                     src="./images/portfolio/mob/portfolio-1-mob-min.jpg"
                     alt="Banking App"
                   />
@@ -433,6 +434,7 @@
                   />
                   <!-- Fallback -->
                   <img
+                    class="portfolio-img"
                     src="./images/portfolio/mob/portfolio-2-mob-min.jpg"
                     alt="Banking App"
                   />
@@ -477,6 +479,7 @@
                   />
                   <!-- Fallback -->
                   <img
+                    class="portfolio-img"
                     src="./images/portfolio/mob/portfolio-3-mob-min.jpg"
                     alt="Banking App"
                   />
@@ -521,6 +524,7 @@
                   />
                   <!-- Fallback -->
                   <img
+                    class="portfolio-img"
                     src="./images/portfolio/mob/portfolio-4-mob-min.jpg"
                     alt="Banking App"
                   />
@@ -564,6 +568,7 @@
                   />
                   <!-- Fallback -->
                   <img
+                    class="portfolio-img"
                     src="./images/portfolio/mob/portfolio-5-mob-min.jpg"
                     alt="Banking App"
                   />
@@ -607,6 +612,7 @@
                   />
                   <!-- Fallback -->
                   <img
+                    class="portfolio-img"
                     src="./images/portfolio/mob/portfolio-6-mob-min.jpg"
                     alt="Banking App"
                   />
