--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
         </div>
       </div>
     </footer>
-    <!-- <div class="modal-overlay">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="close-button" type="button">
           <svg class="close-svg" width="8" height="8">
@@ -783,6 +783,74 @@
           <button class="submit-button" type="submit">Submit</button>
         </form>
       </div>
-    </div> -->
+    </div>
+    <!-- MOBILE MENU -->
+    <div class="mob-menu">
+      <div class="container mob-menu-container">
+        <button class="mob-menu-close-button" type="button">
+          <svg class="mob-menu-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+
+        <nav class="mob-menu-nav">
+          <ul class="mob-menu-soc-list">
+            <li class="mob-menu-soc-list-item">
+              <a href="" class="mob-menu-soc-list-link">Studio</a>
+            </li>
+            <li class="mob-menu-soc-list-item">
+              <a href="" class="mob-menu-soc-list-link">Portfolio</a>
+            </li>
+            <li class="mob-menu-soc-list-item">
+              <a href="" class="mob-menu-soc-list-link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="menu-adrs">
+          <ul class="menu-adrs-list">
+            <li class="menu-adrs-item">
+              <a href="tel:+110001111111" class="menu-adrs-link">
+                +11 (000) 111-11-11</a
+              >
+            </li>
+            <li class="menu-adrs-item">
+              <a href="mailto:info@devstudio.com" class="menu-adrs-link"
+                >info@devstudio.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <ul class="social-media-list mob-social-list-icon">
+          <li class="socilal-media-item">
+            <a class="social-media-link" target="_blank" href="">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socilal-media-item">
+            <a class="social-media-link" target="_blank" href="">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socilal-media-item">
+            <a class="social-media-link" target="_blank" href="">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="socilal-media-item">
+            <a class="social-media-link" target="_blank" href="">
+              <svg class="social-media-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
